feat: add product registry
