# application/product/openapi.yaml
@@ -3,9 +3,28 @@
 
 openapi: 3.0.3
 info:
-    title: ProductCatalogService API
+    title: ""
     version: 0.0.1
 paths:
+    /helloworld/{name}:
+        get:
+            tags:
+                - Greeter
+            description: Sends a greeting
+            operationId: Greeter_SayHello
+            parameters:
+                - name: name
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/helloworld.v1.HelloReply'
     /v1/create_product:
         put:
             tags:
@@ -125,5 +144,13 @@ components:
                     type: array
                     items:
                         $ref: '#/components/schemas/api.product.v1.Product'
+        helloworld.v1.HelloReply:
+            type: object
+            properties:
+                message:
+                    type: string
+            description: The response message containing the greetings
 tags:
+    - name: Greeter
+      description: The greeting service definition.
     - name: ProductCatalogService
